add /etc/dropbear/authorized_keys file

--- a/package/network/services/dropbear/Makefile
+++ b/package/network/services/dropbear/Makefile
@@ -98,6 +98,7 @@ define Package/dropbear/install
 	$(INSTALL_DIR) $(1)/etc/dropbear
 	touch $(1)/etc/dropbear/dropbear_rsa_host_key
 	touch $(1)/etc/dropbear/dropbear_dss_host_key
+	$(INSTALL_CONF) ./files/authorized_keys $(1)/etc/dropbear
 endef
 
 define Package/dropbearconvert/install
